--- a/back-end/ComicWebAPI/ComicWebAPI/ComicWebAPI.csproj
+++ b/back-end/ComicWebAPI/ComicWebAPI/ComicWebAPI.csproj
@@ -4,5 +4,10 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Comic.Business\Comic.Business.csproj" />
+    <ProjectReference Include="..\Comic.RepositoryEF\Comic.RepositoryEF.csproj" />
+  </ItemGroup>
+
 
 </Project>
