✨ feat: genre service added.

--- a/back-end/ComicStoreWebAPI/ComicStore.Infra.EFRepository/ComicStore.Infra.EFRepository.csproj
+++ b/back-end/ComicStoreWebAPI/ComicStore.Infra.EFRepository/ComicStore.Infra.EFRepository.csproj
@@ -24,6 +24,7 @@
   <ItemGroup>
     <ProjectReference Include="..\ComicStore.Domain\ComicStore.Domain.csproj" />
     <ProjectReference Include="..\ComicStore.Infra.BaseRepository\ComicStore.Infra.BaseRepository.csproj" />
+    <ProjectReference Include="..\ComicStore.Service\ComicStore.Service.csproj" />
   </ItemGroup>
 
 </Project>
