--- a/back-end/ComicStoreWebAPI/ComicStore.Domain/ComicStore.Domain.csproj
+++ b/back-end/ComicStoreWebAPI/ComicStore.Domain/ComicStore.Domain.csproj
@@ -1,7 +1,11 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ComicStore.Infra.BaseRepository\ComicStore.Infra.BaseRepository.csproj" />
+  </ItemGroup>
 
 </Project>
