✨ feat: lazy load admin module added.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,10 @@
 {
     "cSpell.words": [
         "Boleto",
+        "Quadrinhos",
         "minmax",
         "mixins",
-        "quadrinho"
+        "quadrinho",
+        "sidenav"
     ]
 }
