✨ feat: comic-crud component added.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
     "cSpell.words": [
         "Boleto",
+        "Datepicker",
         "Quadrinhos",
+        "keycodes",
         "minmax",
         "mixins",
         "quadrinho",
