--- a/front-end/tsconfig.json
+++ b/front-end/tsconfig.json
@@ -5,10 +5,14 @@
   To learn more about this file see: https://angular.io/config/solution-tsconfig.
 */
 {
+  "experimentalDecorators": true,
   "files": [],
   "references": [
     {
       "path": "./tsconfig.app.json"
+    },
+    {
+      "path": "./tsconfig.base.json"
     },
     {
       "path": "./tsconfig.spec.json"
@@ -16,5 +20,5 @@
     {
       "path": "./e2e/tsconfig.json"
     }
-]
+  ]
 }
