✨ feat: genre crud update added.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
         "mixins",
         "noopable",
         "quadrinho",
+        "registro",
         "scrollblock",
         "sidenav",
         "submenu"
