✨ feat: edit and delete genre added.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,9 +2,11 @@
     "cSpell.words": [
         "Boleto",
         "Datepicker",
+        "Flexbox",
         "Quadrinhos",
         "autosize",
         "checkmark",
+        "deletou",
         "keycodes",
         "minmax",
         "mixedmark",
