--- a/back-end/ComicStoreWebAPI/Comic.Shared/ComicStore.Shared.csproj
+++ b/back-end/ComicStoreWebAPI/Comic.Shared/ComicStore.Shared.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="PredicateBuilder" Version="1.0.0" />
+    <PackageReference Include="System.Drawing.Common" Version="5.0.0" />
   </ItemGroup>
 
 </Project>
