📦 refactor: image upload as base64

--- a/front-end/.vscode/settings.json
+++ b/front-end/.vscode/settings.json
@@ -1,7 +1,10 @@
 {
     "cSpell.words": [
+        "Quadrinhos",
+        "deletou",
         "lastline",
         "mixins",
-        "quadrinho"
+        "quadrinho",
+        "registro"
     ]
 }
