--- a/back-end/ComicStoreWebAPI/Comic.Shared/ComicStore.Shared.csproj
+++ b/back-end/ComicStoreWebAPI/Comic.Shared/ComicStore.Shared.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.0" />
     <PackageReference Include="PredicateBuilder" Version="1.0.0" />
     <PackageReference Include="System.Drawing.Common" Version="5.0.0" />
   </ItemGroup>
