--- a/back-end/ComicStoreWebAPI/ComicStoreWebAPI/ComicStore.Application.csproj
+++ b/back-end/ComicStoreWebAPI/ComicStoreWebAPI/ComicStore.Application.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Formatters.Json" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.0">
@@ -17,6 +18,10 @@
   <ItemGroup>
     <ProjectReference Include="..\ComicStore.Infra.EFRepository\ComicStore.Infra.EFRepository.csproj" />
     <ProjectReference Include="..\ComicStore.Service\ComicStore.Service.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Resources\Images\" />
   </ItemGroup>
 
 
