--- a/back-end/ComicStoreWebAPI/ComicStoreWebAPI/ComicStore.Application.csproj
+++ b/back-end/ComicStoreWebAPI/ComicStoreWebAPI/ComicStore.Application.csproj
@@ -5,6 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Resources\**" />
+    <Content Remove="Resources\**" />
+    <EmbeddedResource Remove="Resources\**" />
+    <None Remove="Resources\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Formatters.Json" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.0" />
@@ -19,10 +26,6 @@
   <ItemGroup>
     <ProjectReference Include="..\ComicStore.Infra.EFRepository\ComicStore.Infra.EFRepository.csproj" />
     <ProjectReference Include="..\ComicStore.Service\ComicStore.Service.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Resources\Images\" />
   </ItemGroup>
 
 
