📚 docs: update readme.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,8 @@
         "Datepicker",
         "Deletar",
         "Flexbox",
+        "Newtonsoft",
+        "Nuget",
         "Quadrinhos",
         "autosize",
         "checkmark",
