🐛 fix: comic-dialog close event.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,14 +6,19 @@
         "Flexbox",
         "Newtonsoft",
         "Nuget",
+        "PROPPATCH",
         "Quadrinhos",
+        "UNPROCESSABLE",
         "autosize",
+        "behaviours",
         "checkmark",
         "deletou",
+        "hotspot",
         "keycodes",
         "minmax",
         "mixedmark",
         "mixins",
+        "multistatus",
         "noopable",
         "quadrinho",
         "registro",
