✨ feat: getComicByID endpoint.

--- a/back-end/ComicStoreWebAPI/ComicStoreWebAPI/Properties/launchSettings.json
+++ b/back-end/ComicStoreWebAPI/ComicStoreWebAPI/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "api/genre",
+      "launchUrl": "api/comic/shop-item",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
