✨ feat: swagger added.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "Nuget",
         "PROPPATCH",
         "Quadrinhos",
+        "Swashbuckle",
         "UNPROCESSABLE",
         "autosize",
         "behaviours",
