✨ feat: role based authorization

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "Quadrinhos",
         "Swashbuckle",
         "UNPROCESSABLE",
+        "accessdenied",
         "autosize",
         "behaviours",
         "checkmark",
