--- a/front-end/package.json
+++ b/front-end/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~10.0.2",
     "@angular/platform-browser-dynamic": "~10.0.2",
     "@angular/router": "~10.0.2",
+    "@auth0/angular-jwt": "^5.0.2",
     "ngx-awesome-uploader": "^9.0.7",
     "ngx-mat-select-search": "^3.1.4",
     "ngx-material-file-input": "^2.1.1",
