✨ feat: ambient configuration.

--- a/back-end/ComicStoreWebAPI/ComicStoreWebAPI/appsettings.Home.json
+++ b/back-end/ComicStoreWebAPI/ComicStoreWebAPI/appsettings.Home.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "IdentityConnection": "Data Source=localhost;Initial Catalog=ComicStore;Integrated Security=True"
+    "IdentityConnection": "Data Source=DESKTOP-2AKCSN7\\PROFFY;Initial Catalog=ComicStore;Integrated Security=True"
   }
 }
