--- a/back-end/ComicStoreWebAPI/ComicStore.Infra.BaseRepository/ComicStore.Infra.BaseRepository.csproj
+++ b/back-end/ComicStoreWebAPI/ComicStore.Infra.BaseRepository/ComicStore.Infra.BaseRepository.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <Configurations>Debug;Release;Home</Configurations>
   </PropertyGroup>
 
 </Project>
