--- a/back-end/ComicStoreWebAPI/ComicStore.Infra.Security/ComicStore.Infra.Security.csproj
+++ b/back-end/ComicStoreWebAPI/ComicStore.Infra.Security/ComicStore.Infra.Security.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Library</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <Configurations>Debug;Release;Home</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
