🐛 fix: paginator projection type definition.

--- a/back-end/ComicStoreWebAPI/ComicStoreWebAPI/appsettings.Development.json
+++ b/back-end/ComicStoreWebAPI/ComicStoreWebAPI/appsettings.Development.json
@@ -7,6 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "IdentityConnection": "Data Source=localhost;Initial Catalog=ComicStore;Integrated Security=True;MultipleActiveResultSets=true"
+    "IdentityConnection": "Data Source=localhost;Initial Catalog=ComicStore;Integrated Security=True"
+    //"IdentityConnection": "Data Source=localhost;Initial Catalog=ComicStore;Integrated Security=True;MultipleActiveResultSets=true"
   }
 }
