💎 style: availability position.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,7 @@
         "deletou",
         "hotspot",
         "keycodes",
+        "logado",
         "minmax",
         "mixedmark",
         "mixins",
