--- a/front-end/package.json
+++ b/front-end/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~10.0.2",
     "@angular/router": "~10.0.2",
     "@auth0/angular-jwt": "^5.0.2",
+    "cep-promise": "^4.0.3",
     "ngx-awesome-uploader": "^9.0.7",
     "ngx-mat-select-search": "^3.1.4",
     "ngx-material-file-input": "^2.1.1",
