✨ feat: showValidation directive.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,6 +18,7 @@
         "hotspot",
         "keycodes",
         "logado",
+        "minlength",
         "minmax",
         "mixedmark",
         "mixins",
