📦 refactor: creation of order module.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,6 +18,7 @@
         "hotspot",
         "keycodes",
         "logado",
+        "maxlength",
         "minlength",
         "minmax",
         "mixedmark",
