--- a/front-end/package.json
+++ b/front-end/package.json
@@ -25,6 +25,7 @@
     "@auth0/angular-jwt": "^5.0.2",
     "cep-promise": "^4.0.3",
     "ngx-awesome-uploader": "^9.0.7",
+    "ngx-mask": "^11.1.4",
     "ngx-mat-select-search": "^3.1.4",
     "ngx-material-file-input": "^2.1.1",
     "rxjs": "~6.5.5",
@@ -35,7 +36,7 @@
     "@angular-devkit/build-angular": "~0.1000.1",
     "@angular/cli": "~10.0.1",
     "@angular/compiler-cli": "~10.0.2",
-    "@schematics/angular": "^11.0.1",
+    "@schematics/angular": "^11.0.5",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
