📦 refactor: folder rename.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,8 +14,11 @@
         "autosize",
         "behaviours",
         "checkmark",
+        "codelyzer",
         "deletou",
+        "devkit",
         "hotspot",
+        "jasminewd",
         "keycodes",
         "logado",
         "maxlength",
