--- a/front-end/package.json
+++ b/front-end/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "analyze": "ng build --prod --stats-json && webpack-bundle-analyzer ./dist/comics-plus-plus/stats.json"
   },
   "private": true,
   "dependencies": {
@@ -33,7 +34,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1000.1",
-    "@angular/cli": "^11.0.5",
+    "@angular/cli": "^10.0.2",
     "@angular/compiler-cli": "~10.0.2",
     "@schematics/angular": "^11.0.5",
     "@types/jasmine": "~3.5.0",
@@ -50,6 +51,7 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~3.9.5"
+    "typescript": "~3.9.5",
+    "webpack-bundle-analyzer": "^4.3.0"
   }
 }
