✨ feat: user login assign after register.

--- a/front-end/tsconfig.app.json
+++ b/front-end/tsconfig.app.json
@@ -5,6 +5,10 @@
     "outDir": "./out-tsc/app",
     "types": []
   },
-  "files": ["src/main.ts", "src/polyfills.ts"],
+  "files": [
+    "src/main.ts",
+    "src/polyfills.ts",
+    "./src/app/authentication/models/DecodedToken.ts"
+  ],
   "include": ["src/**/*.d.ts"]
 }
