📦 refactor(admin): input autofocus added.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "Datepicker",
         "Deletar",
         "Flexbox",
+        "Formulario",
         "Newtonsoft",
         "Nuget",
         "PROPPATCH",
