--- a/back-end/ComicStoreWebAPI/ComicStoreWebAPI/ComicStore.Application.csproj
+++ b/back-end/ComicStoreWebAPI/ComicStoreWebAPI/ComicStore.Application.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <Configurations>Debug;Release;Home</Configurations>
+    <RunAnalyzersDuringBuild>false</RunAnalyzersDuringBuild>
   </PropertyGroup>
 
   <ItemGroup>
@@ -31,6 +32,21 @@
     <ProjectReference Include="..\ComicStore.Infra.EFRepository\ComicStore.Infra.EFRepository.csproj" />
     <ProjectReference Include="..\ComicStore.Infra.Security\ComicStore.Infra.Security.csproj" />
     <ProjectReference Include="..\ComicStore.Service\ComicStore.Service.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
 
 
