--- a/back-end/ComicStoreWebAPI/ComicStore.Infra.Security/ComicStore.Infra.Security.csproj
+++ b/back-end/ComicStoreWebAPI/ComicStore.Infra.Security/ComicStore.Infra.Security.csproj
@@ -4,6 +4,7 @@
     <OutputType>Library</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <Configurations>Debug;Release;Home</Configurations>
+    <RunAnalyzersDuringBuild>false</RunAnalyzersDuringBuild>
   </PropertyGroup>
 
   <ItemGroup>
