--- a/back-end/ComicStoreWebAPI/ComicStore.Service/ComicStore.Service.csproj
+++ b/back-end/ComicStoreWebAPI/ComicStore.Service/ComicStore.Service.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <Configurations>Debug;Release;Home</Configurations>
+    <RunAnalyzersDuringBuild>false</RunAnalyzersDuringBuild>
   </PropertyGroup>
 
   <ItemGroup>
