--- a/back-end/ComicStoreWebAPI/ComicStoreWebAPI/appsettings.Development.json
+++ b/back-end/ComicStoreWebAPI/ComicStoreWebAPI/appsettings.Development.json
@@ -7,7 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "IdentityConnection": "Data Source=localhost;Initial Catalog=ComicStore;Integrated Security=True",
-    "SomeeConnection": "workstation id=ComicStore.mssql.somee.com;packet size=4096;user id=gleisonkz_SQLLogin_1;pwd=wfxbjr5rqs;data source=ComicStore.mssql.somee.com;persist security info=False;initial catalog=ComicStore"
+    "DefaultConnection": "Data Source=localhost;Initial Catalog=ComicStore;Integrated Security=True"    
   }
 }
