📚 docs: readme resources

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,12 @@
 {
     "cSpell.words": [
         "Boleto",
+        "Contatos",
         "Datepicker",
         "Deletar",
         "Flexbox",
         "Formulario",
+        "Gleison",
         "Newtonsoft",
         "Nuget",
         "PROPPATCH",
