📦 refactor: add docker compose and migration worker

--- a/back-end/ComicStoreWebAPI/ComicStoreWebAPI/appsettings.Development.json
+++ b/back-end/ComicStoreWebAPI/ComicStoreWebAPI/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=localhost;Initial Catalog=ComicStore;Integrated Security=True"    
+    "DefaultConnection": "server=localhost;Database=ComicStore;User Id=sa;Password=P@ssw0rd!"
   }
 }
