📦 refactor(front-end): prettier identation

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
         "Quadrinhos",
         "Swashbuckle",
         "UNPROCESSABLE",
+        "Whitespaces",
         "accessdenied",
         "autosize",
         "behaviours",
