--- a/front-end/tsconfig.base.json
+++ b/front-end/tsconfig.base.json
@@ -3,6 +3,7 @@
   "compileOnSave": false,
   "compilerOptions": {
     "baseUrl": "./src",
+    "strictPropertyInitialization": false,
     "paths": {
       "@shared/*": ["app/shared/*"],
       "@core/*": ["app/core/*"],
