--- a/front-end/tsconfig.app.json
+++ b/front-end/tsconfig.app.json
@@ -7,7 +7,8 @@
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
-    "preserveWhitespaces": true
+    "preserveWhitespaces": true,
+    "strictTemplates": true
   },
   "files": [
     "src/main.ts",
